Create Static Components

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Reset default browser styles and add Google Fonts-->
-    <link rel="stylesheet" type="text.css" href="./reset.css" />
+    <link rel="stylesheet" type="text/css" href="./reset.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:600" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work%20Sans:300,500" />
 
